--- a/opt_flow.ipynb
+++ b/opt_flow.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -50,10 +52,10 @@
     "\n",
     "\n",
     "def draw_flow(img, flow, step=16):\n",
-    "    h, w = img.shape[:2]\n",
-    "    y, x = np.mgrid[step/2:h:step, step/2:w:step].reshape(2,-1).astype(int)\n",
+    "    h, w = img.shape[:2]   # no of rows  and columns in image (if it is 3 then it also give no. of channel of img)\n",
+    "    y, x = np.mgrid[step/2:h:step, step/2:w:step].reshape(2,-1).astype(int) # mesh-grid gives ndarrays all of the same dimensions\n",
     "    fx, fy = flow[y,x].T\n",
-    "    lines = np.vstack([x, y, x+fx, y+fy]).T.reshape(-1, 2, 2)\n",
+    "    lines = np.vstack([x, y, x+fx, y+fy]).T.reshape(-1, 2, 2) # vstack is use for to collect the array and make stack of array in vertical form (row wise)\n",
     "    lines = np.int32(lines + 0.5)\n",
     "    vis = cv.cvtColor(img, cv.COLOR_GRAY2BGR)\n",
     "    cv.polylines(vis, lines, 0, (0, 255, 0))\n",
@@ -84,10 +86,11 @@
     "    return res\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    import sys\n",
+    "    import sys    #The sys module provides information about constants, functions and methods of the Python interpreter. \n",
+    "                   # dir(system) gives of the available constants, functions and methods.\n",
     "    print(__doc__)\n",
     "    try:\n",
-    "        fn = sys.argv[1]\n",
+    "        fn = sys.argv[1]   #sys.argv is the list of command-line arguments.\n",
     "    except IndexError:\n",
     "        fn = 0\n",
     "\n",
@@ -101,10 +104,11 @@
     "    while True:\n",
     "        ret, img = cam.read()\n",
     "        gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
-    "        flow = cv.calcOpticalFlowFarneback(prevgray, gray, None, 0.5, 3, 15, 3, 5, 1.2, 0)\n",
+    "        flow = cv.calcOpticalFlowFarneback(prevgray, gray, None, 0.5, 3, 15, 3, 5, 1.2, 0) \n",
+    "        # calculate optical flow and convert rgb videos by applying lucass method followed by FARneBACK ALGO.\n",
     "        prevgray = gray\n",
     "\n",
-    "        cv.imshow('flow', draw_flow(gray, flow))\n",
+    "        cv.imshow('flow', draw_flow(gray, flow))  #its shows the image\n",
     "        if show_hsv:\n",
     "            cv.imshow('flow HSV', draw_hsv(flow))\n",
     "        if show_glitch:\n",
@@ -133,6 +137,28 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
